<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout
    tools:context=".activities.CreateBoardActivity"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:background="?attr/colorPrimary"
            android:id="@+id/toolbar_create_board_activity"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/ic_background"
        android:padding="@dimen/create_board_content_padding">

        <androidx.cardview.widget.CardView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            android:elevation="@dimen/card_view_elevation">

            <LinearLayout
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="@dimen/card_view_layout_content_padding"
                android:gravity="center_horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_height="@dimen/board_image_size"
            android:layout_width="@dimen/board_image_size"
            android:id="@+id/iv_board_image"
            android:src="@drawable/ic_board_place_holder"
            android:contentDescription="@string/image_contentDescription"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/create_board_til_marginTop">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:id="@+id/et_board_name"
                        android:textSize="@dimen/et_text_size"
                        android:inputType="text"
                        android:hint="@string/board_name"/>

                </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/shape_button_rounded"
        android:id="@+id/btn_create"
        android:gravity="center"
        android:layout_marginTop="@dimen/create_board_btn_marginTop"
        android:textSize="@dimen/btn_text_size"
        android:textColor="@android:color/white"
        android:text="@string/create"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:foreground="?attr/selectableItemBackground"
        android:layout_gravity="center"/>
</LinearLayout>

</androidx.cardview.widget.CardView>

</LinearLayout>

</LinearLayout>