<?xml version="1.0" encoding="UTF-8"?>
<androidx.cardview.widget.CardView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:elevation="@dimen/task_item_cv_elevation"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            tools:visibility="visible"
            android:visibility="gone"
            android:textSize="@dimen/task_item_add_item_text_size"
            android:textColor="@color/colorAccent"
            android:text="@string/action_add_list"
            android:padding="@dimen/task_item_add_item_text_padding"
            android:gravity="center"
            android:foreground="?attr/selectableItemBackground"
            android:background="@color/task_list_action_color"
            android:id="@+id/tv_add_task_list"/>
        <androidx.cardview.widget.CardView
            android:elevation="@dimen/task_item_cv_elevation"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            tools:visibility="visible"
            android:visibility="gone"
            android:id="@+id/cv_add_task_list_name"
            app:cardCornerRadius="@dimen/task_item_cv_corner_radius"
            android:layout_margin="@dimen/task_item_cv_margin">
            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center">
                <ImageButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="@dimen/task_item_image_buttons_padding"
                    android:background="?attr/selectableItemBackground"
                    android:id="@+id/ib_close_list_name"
                    android:src="@drawable/ic_cancel"
                    android:contentDescription="@string/image_contentDescription"/>
                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:id="@+id/et_task_list_name"
                    android:inputType="text"
                    android:hint="@string/hint_list_name"
                    android:autofillHints="@string/hint_list_name"
                    android:layout_weight="1"/>
                <ImageButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="@dimen/task_item_image_buttons_padding"
                    android:background="?attr/selectableItemBackground"
                    android:id="@+id/ib_done_list_name"
                    android:src="@drawable/ic_done"
                    android:contentDescription="@string/image_contentDescription"/>
</LinearLayout>
</androidx.cardview.widget.CardView>
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            tools:visibility="visible"
            android:visibility="gone"
            android:gravity="center_vertical"
            android:background="@color/task_list_action_color"
            android:id="@+id/ll_task_item">
            <LinearLayout
                android:orientation="horizontal"
                android:elevation="@dimen/task_item_title_view_elevation"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                tools:visibility="visible"
                android:visibility="visible"
                android:gravity="center"
                android:background="@color/task_list_title_view_bg_color"
                android:id="@+id/ll_title_view">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:textSize="@dimen/task_item_title_text_size"
                    android:textColor="@color/primary_text_color"
                    tools:text="Title"
                    android:padding="@dimen/task_item_title_text_padding"
                    android:id="@+id/tv_task_list_title"
                    android:layout_weight="1"/>
                <ImageButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="@dimen/task_item_image_buttons_padding"
                    android:background="?attr/selectableItemBackground"
                    android:id="@+id/ib_edit_list_name"
                    android:src="@drawable/ic_edit"
                    android:contentDescription="@string/image_contentDescription"/>
                <ImageButton
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="@dimen/task_item_image_buttons_padding"
                    android:background="?attr/selectableItemBackground"
                    android:id="@+id/ib_delete_list"
                    android:src="@drawable/ic_delete"
                    android:contentDescription="@string/image_contentDescription"/>
</LinearLayout>
    <View
        android:layout_height="@dimen/task_item_divider_height"
        android:layout_width="match_parent"
        android:background="@color/divider_color"/>
            <androidx.cardview.widget.CardView
                android:elevation="@dimen/task_item_cv_elevation"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                tools:visibility="visible"
                android:visibility="gone"
                android:id="@+id/cv_edit_task_list_name"
                app:cardCornerRadius="@dimen/task_item_cv_corner_radius"
                android:layout_margin="@dimen/task_item_cv_margin">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center">
                    <ImageButton
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:padding="@dimen/task_item_image_buttons_padding"
                        android:background="?attr/selectableItemBackground"
                        android:id="@+id/ib_close_editable_view"
                        android:src="@drawable/ic_cancel"
                        android:contentDescription="@string/image_contentDescription"/>
                    <EditText
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:id="@+id/et_edit_task_list_name"
                        android:inputType="text"
                        android:hint="@string/hint_list_name"
                        android:autofillHints="@string/hint_list_name"
                        android:layout_weight="1"/>
                    <ImageButton
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:padding="@dimen/task_item_image_buttons_padding"
                        android:background="?attr/selectableItemBackground"
                        android:id="@+id/ib_done_edit_list_name"
                        android:src="@drawable/ic_done"
                        android:contentDescription="@string/image_contentDescription"/>
</LinearLayout>
</androidx.cardview.widget.CardView>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/rv_card_list"
        android:layout_margin="@dimen/task_item_rv_card_list_margin"/>
            <androidx.cardview.widget.CardView
                android:elevation="@dimen/task_item_cv_elevation"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                tools:visibility="visible"
                android:visibility="gone"
                android:id="@+id/cv_add_card"
                app:cardCornerRadius="@dimen/task_item_cv_corner_radius"
                android:layout_margin="@dimen/task_item_cv_margin">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:gravity="center">
                    <ImageButton
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:padding="@dimen/task_item_image_buttons_padding"
                        android:background="?attr/selectableItemBackground"
                        android:id="@+id/ib_close_card_name"
                        android:src="@drawable/ic_cancel"
                        android:contentDescription="@string/image_contentDescription"/>
                    <EditText
                        android:layout_height="wrap_content"
                        android:layout_width="0dp"
                        android:id="@+id/et_card_name"
                        android:inputType="text"
                        android:hint="@string/hint_card_name"
                        android:autofillHints="@string/hint_card_name"
                        android:layout_weight="1"/>
                    <ImageButton
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:padding="@dimen/task_item_image_buttons_padding"
                        android:background="?attr/selectableItemBackground"
                        android:id="@+id/ib_done_card_name"
                        android:src="@drawable/ic_done"
                        android:contentDescription="@string/image_contentDescription"/>
</LinearLayout>
</androidx.cardview.widget.CardView>

    <TextView
        android:elevation="@dimen/task_item_add_card_text_elevation"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        tools:visibility="visible"
        android:textSize="@dimen/task_item_add_item_text_size"
        android:textColor="@color/colorAccent"
        android:text="@string/action_add_card"
        android:padding="@dimen/task_item_add_item_text_padding"
        android:gravity="center"
        android:foreground="?attr/selectableItemBackground"
        android:background="@color/task_list_action_color"
        android:id="@+id/tv_add_card"/>

</LinearLayout>

</LinearLayout>

</androidx.cardview.widget.CardView>